[metadata]
name = 'lda2vec'
version = '0.0.1'
description = ''
author = 'Bharath G.S'
author_email = 'royalkingpin@gmail.com'
license = 'MIT'
url = 'https://github.com/_/lda2vec'

[requires]
python_version = ['3.6']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
